Fixes position of relevance select on tablet/mobile

--- a/stylesheets/_searchapp.scss
+++ b/stylesheets/_searchapp.scss
@@ -154,6 +154,8 @@ rhdp-search-sort-page {
             padding: 8px 0;
             color:$blue;
             font-size: 16px;
+            position: relative;
+            top: -4px;
 
             &:hover, &:focus {
                 background-color: $blue;
